# cubic-server

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  blocks.cmake  boost.cmake  bootstrap.sh  build.zig  build.zig.zon  c_flag_overrides.cmake  config.yml  cubic-server.kdev4  cxx_flag_overrides.cmake  docker-compose.yaml  generator.py  meson.build  meson_options.txt  pack.mcmeta
configuration/: CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.hpp  config.yml  test.cpp
cubic-server/: CMakeLists.txt  Chat.cpp  Chat.hpp  Checksum.cpp  Checksum.hpp  Client.cpp  Client.hpp  CommandLine.cpp  CommandLine.hpp  CompressionUtils.cpp  CompressionUtils.hpp  Dimension.cpp  Dimension.hpp  EASEncryptionHandler.cpp  EASEncryptionHandler.hpp  Entity.cpp  Entity.hpp  EntityType.hpp  Instance.hpp  InstanceGroup.cpp  InstanceGroup.hpp  Inventory.hpp  Item.cpp  Item.hpp  LivingEntity.cpp  LivingEntity.hpp  LootTables.cpp  LootTables.hpp  Operator.cpp  Operator.hpp  Permissions.cpp  Permissions.hpp  Player.cpp  Player.hpp  PlayerAttributes.cpp  PlayerAttributes.hpp  PluginInterface.cpp  PluginInterface.hpp  PluginManager.cpp  PluginManager.hpp  (+36 more)
cubic-server/Default/: DefaultWorld.cpp  DefaultWorld.hpp  DefaultWorldGroup.cpp  Overworld.cpp  Overworld.hpp  TheEnd.cpp  TheEnd.hpp  TheNether.cpp  TheNether.hpp
cubic-server/ai/: CMakeLists.txt  ai.cpp  ai.hpp  wandering.cpp  wandering.hpp
cubic-server/blocks/: AcaciaButton.cpp  AcaciaButton.hpp  AcaciaDoor.cpp  AcaciaDoor.hpp  AcaciaFence.cpp  AcaciaFence.hpp  AcaciaFenceGate.cpp  AcaciaFenceGate.hpp  AcaciaHangingSign.cpp  AcaciaHangingSign.hpp  AcaciaLeaves.cpp  AcaciaLeaves.hpp  AcaciaLog.cpp  AcaciaLog.hpp  AcaciaPlanks.cpp  AcaciaPlanks.hpp  AcaciaPressurePlate.cpp  AcaciaPressurePlate.hpp  AcaciaSapling.cpp  AcaciaSapling.hpp  AcaciaSign.cpp  AcaciaSign.hpp  AcaciaSlab.cpp  AcaciaSlab.hpp  AcaciaStairs.cpp  AcaciaStairs.hpp  AcaciaTrapdoor.cpp  AcaciaTrapdoor.hpp  AcaciaWallHangingSign.cpp  AcaciaWallHangingSign.hpp  AcaciaWallSign.cpp  AcaciaWallSign.hpp  AcaciaWood.cpp  AcaciaWood.hpp  ActivatorRail.cpp  ActivatorRail.hpp  Air.cpp  Air.hpp  Allium.cpp  Allium.hpp  (+1906 more)
cubic-server/bounding_box/: BoundingBox.cpp  BoundingBox.hpp
cubic-server/chat/: CMakeLists.txt  ChatMessageUtils.hpp  ChatRegistry.cpp  ChatRegistry.hpp  ClickEvent.cpp  ClickEvent.hpp  HoverEvent.cpp  HoverEvent.hpp  Message.cpp  Message.hpp  SimpleMessage.cpp  SimpleMessage.hpp  events.hpp  meson.build  translationFromKey.cpp  translationFromKey.hpp
cubic-server/collision/: BoundingBox.cpp  BoundingBox.hpp  CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp
cubic-server/command_parser/: CMakeLists.txt  CommandParser.cpp  CommandParser.hpp  meson.build
cubic-server/configuration/: ArgumentHolder.cpp  ArgumentHolder.hpp  ArgumentsHolder.hpp  ArgumentsParser.cpp  ArgumentsParser.hpp  CMakeLists.txt  ConfigHandler.cpp  ConfigHandler.hpp  Node.cpp  Node.hpp  Schema.hpp  Value.cpp  Value.hpp  conversion.hpp  details.hpp  errors.hpp  meson.build
cubic-server/default/: CMakeLists.txt  DefaultWorld.cpp  DefaultWorld.hpp  DefaultWorldGroup.cpp  DefaultWorldGroup.hpp  Overworld.cpp  Overworld.hpp  TheEnd.cpp  TheEnd.hpp  TheNether.cpp  TheNether.hpp  meson.build
cubic-server/entities/: ArmorStats.hpp  Arrow.cpp  Arrow.hpp  CMakeLists.txt  Chicken.cpp  Chicken.hpp  Entity.cpp  Entity.hpp  EntityType.hpp  Item.cpp  Item.hpp  LivingEntity.cpp  LivingEntity.hpp  Mob.hpp
cubic-server/events/: CMakeLists.txt  CancelEvents.cpp  CancelEvents.hpp  Events.hpp
cubic-server/generation/: CMakeLists.txt  generator.cpp  generator.hpp  meson.build  nether.cpp  nether.hpp  overworld.cpp  overworld.hpp
cubic-server/http/: CMakeLists.txt  HttpConnection.cpp  HttpConnection.hpp  HttpServer.cpp  HttpServer.hpp
cubic-server/interface/: CMakeLists.txt  InterfaceContainer.cpp  InterfaceContainer.hpp  LogsInterface.cpp  LogsInterface.hpp  ManagementInterface.cpp  ManagementInterface.hpp  PlayersInterface.cpp  PlayersInterface.hpp  meson.build
cubic-server/items/: CMakeLists.txt  UsableItem.cpp  UsableItem.hpp  foodItems.hpp  fuels.hpp  toolsDamage.hpp
cubic-server/logging/: CMakeLists.txt  FileAndFolderHandler.cpp  FileAndFolderHandler.hpp  FileAndFolderHandler_unittest.cpp  Logger.cpp  Logger.hpp  Logger_unittest.cpp  Registry.cpp  Registry.hpp  Sinks.cpp  Sinks.hpp  TimeFormatter.cpp  TimeFormatter.hpp  TimeFormatter_unittest.cpp  formating.hpp  logging.cpp  logging.hpp  meson.build
cubic-server/loot_tables/: CMakeLists.txt  LootTable.cpp  LootTable.hpp  LootTables.cpp  LootTables.hpp  Pool.cpp  Pool.hpp
cubic-server/math/: CMakeLists.txt  Math.cpp  Math.hpp  Math_unittest.cpp  Vector2.hpp  Vector3.cpp  Vector3.hpp  meson.build
cubic-server/nbt-manager/: CMakeLists.txt  Nbt-TAG_Byte.hpp  Nbt-TAG_Byte_Array.hpp  Nbt-TAG_Compound.hpp  Nbt-TAG_Double.hpp  Nbt-TAG_Float.hpp  Nbt-TAG_Int.hpp  Nbt-TAG_Int_Array.hpp  Nbt-TAG_List.hpp  Nbt-TAG_Long.hpp  Nbt-TAG_Long_Array.hpp  Nbt-TAG_Short.hpp  Nbt-TAG_String.hpp  Nbt-base.hpp
cubic-server/protocol/: CMakeLists.txt  ClientPackets.cpp  ClientPackets.hpp  PacketUtils.hpp  ParseExceptions.hpp  ServerPackets.cpp  ServerPackets.hpp  Structures.cpp  Structures.hpp  WorldEvent.hpp  common.hpp  meson.build  metadata.cpp  metadata.hpp  typeSerialization.hpp
cubic-server/protocol_id_converter/: CMakeLists.txt  blockDataConverter.cpp  blockDataConverter.hpp  blockIdConverter.cpp  (+11 more)
interface/: CMakeLists.txt  LogsInterface.cpp  LogsInterface.hpp  ManagementInterface.cpp  ManagementInterface.hpp  PlayersInterface.cpp  PlayersInterface.hpp  main.cpp
logging/: CMakeLists.txt  FileAndFolderHandler.cpp  FileAndFolderHandler.hpp  FileAndFolderHandler_unittest.cpp  Logger.cpp  Logger.hpp  Logger_unittest.cpp  TimeFormatter.cpp  TimeFormatter.hpp  TimeFormatter_unittest.cpp  logger.cpp  logger.hpp
math/: CMakeLists.txt  Math.cpp  Math.hpp  Math_unittest.cpp
world/: CMakeLists.txt  ChunkColumn.cpp  ChunkColumn.hpp  Level.cpp  Level.hpp  LevelData.cpp  LevelData.hpp  World.cpp  World.hpp
(+595 files in other folders)
