#========
# Sources
#========

cubic_src += files([
	'main.cpp',
	'Server.cpp',
	'Client.cpp',
	'Player.cpp',
	'PlayerAttributes.cpp',
	'Entity.cpp',
	'LivingEntity.cpp',
	'Chat.cpp',
	'WorldGroup.cpp',
	'World.cpp',
	'Dimension.cpp',
	'nbt.cpp',
	'SoundSystem.cpp',
	'TickClock.cpp',
	'CommandLine.cpp',
	'Permissions.cpp',
	'types.cpp',
])

cubic_include += include_directories('.')

#==============
# Other subdirs
#==============

subdir('blocks')
subdir('chat')
subdir('command_parser')
subdir('configuration')
subdir('default')
subdir('generation')
subdir('interface')
# subdir('items')
subdir('logging')
subdir('math')
subdir('protocol')
subdir('protocol_id_converter')
subdir('thread_pool')
subdir('whitelist')
subdir('world_storage')
